--- a/02-android/app/src/main/res/values-land/strings.xml
+++ b/02-android/app/src/main/res/values-land/strings.xml
@@ -1,3 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="texto_saludo">Good night landscape</string>
+    <color name="back1">#FF3700B3</color>
+    <color name="color1">#FFFFFFFF</color>
 </resources>
