--- a/Examen01/app/src/main/res/values/strings.xml
+++ b/Examen01/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Examen01</string>
+    <string-array name="opciones">
+        <item>true</item>
+        <item>false</item>
+    </string-array>
 </resources>
