--- a/Examen01/app/src/main/res/values/strings.xml
+++ b/Examen01/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
         <item>true</item>
         <item>false</item>
     </string-array>
+    <string-array name="string_array_opciones_dialogo">
+        <item>Si</item>
+        <item>No</item>
+    </string-array>
 </resources>
